fix form action

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="splitter"></div>
 
     <section class="splitstretch splitpanel-v">
-        <form id="code-form" method="POST" action="sql" target="result"
+        <form id="code-form" method="POST" action="" target="result"
             class="code-form splitstretch">
             <code id="code" class="code"></code>
             <input type="hidden" name="query" id="query-input" />
