--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
             <li class="tree-node">
                 <header class="tree-node-header">
                     <button class="hitarea tree-node-toggler"
-                            data-bind="click: toggle"
-                            data-bind.tree-node-toggler_hidden="!canExpand"
-                            data-bind.tree-node-toggler_collapsed="!isExpanded"
-                            data-bind.tree-node-toggler_expanded="isExpanded"
-                            data-bind.tree-node-toggler_loading="childrenAreLoading"></button>
+                            data-bind="click: toggle,
+                                       css: {
+                                            'tree-node-toggler_hidden': isLeaf,
+                                            'tree-node-toggler_collapsed': isCollapsed,
+                                            'tree-node-toggler_expanded': isExpanded,
+                                            'tree-node-toggler_loading': childrenAreLoading,
+                                       }"></button>
                     <span class="tree-node-name"
                           data-bind="template: { name: nameTmpl, data: obj },
                                      click: open"></span>
@@ -80,8 +82,7 @@
     <script type="text/html" id="column-tree-node-name-tmpl">
         <span class="icon-doc-text-1">
             <span data-bind="text: name"></span>
-            :
-            <span data-bind="text: dataType"></span>
+            : <span data-bind="text: dataType"></span>
         </span>
     </script>
 
@@ -89,11 +90,13 @@
         <section class="my-queries">
             <ul class="my-queries-list" data-bind="foreach: items">
                 <li class="my-queries-item"
-                    data-bind.my-queries-item-current="isCurrent">
+                    data-bind="css: { 'my-queries-item-current': isCurrent }">
+
                     <a href="#" class="icon-code my-queries-item-name"
-                    data-bind="click: open, text: name"></a>
+                       data-bind="click: open, text: name"></a>
+
                     <button class="action my-queries-item-del"
-                        data-bind="click: remove"></button>
+                            data-bind="click: remove"></button>
                 </li>
             </ul>
             <button class="action" data-bind="click: add">new query</button>
@@ -104,8 +107,6 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
-    <script src="/knockout-es5.js" type="text/javascript"></script>
-    <script src="/knockout-class.js" type="text/javascript"></script>
     <script src="/tree.js" type="text/javascript"></script>
     <script src="/queries.js" type="text/javascript"></script>
     <script src="/app.js" type="text/javascript"></script>
