--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>pgBlackboard</title>
-    <link href="/layout.css" rel="stylesheet" type="text/css" />
-    <link href="/dark.css" rel="stylesheet" type="text/css" />
-    <link href="/tree.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" />
+    <script src="app.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
 </head>
 <body class="splitpanel-h">
 
@@ -49,7 +50,7 @@
                             data-bind="click: toggle,
                                        css: {
                                             'tree-node-toggler_hidden': isLeaf,
-                                            'tree-node-toggler_collapsed': isCollapsed,
+                                            'tree-node-toggler_collapsed': !isExpanded(),
                                             'tree-node-toggler_expanded': isExpanded,
                                             'tree-node-toggler_loading': childrenAreLoading,
                                        }"></button>
@@ -107,13 +108,6 @@
         </section>
     </script>
 
-
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
-    <script src="/tree.js" type="text/javascript"></script>
-    <script src="/queries.js" type="text/javascript"></script>
-    <script src="/app.js" type="text/javascript"></script>
-    <script src="/splitpanel.js" type="text/javascript"></script>
+    <script>main()</script>
 </body>
 </html>
