--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" />
     <title>pgBlackboard</title>
     <link href="style.css" rel="stylesheet" />
     <script src="app.js"></script>
@@ -18,7 +19,7 @@
 
     <section class="splitstretch splitpanel-v">
         <form id="code-form" method="POST" action="" target="result"
-            class="code-form splitstretch">
+            class="code-form splitstretch" enctype="multipart/form-data">
             <code id="code" class="code"></code>
             <input type="hidden" name="query" id="query-input" />
 
