--- a/static/index.html
+++ b/static/index.html
@@ -33,6 +33,8 @@
           accesskey="e" type="submit"
           name="format" value="html"></button>
       </div>
+
+      <div class="spinner-shield" data-bind="css: { visible: queryIsOpening }"></div>
     </form>
     <div class="splitter"></div>
     <iframe name="result" class="result scrollbox splitfix"></iframe>
