parse db name on client

--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,9 @@
       class="splitstretch" enctype="multipart/form-data">
 
       <code id="editor"></code>
-      <input type="hidden" name="query" id="queryinput" />
+
+      <input type="hidden" name="database" />
+      <input type="hidden" name="query" />
 
       <div id="execbar">
         <button type="submit" title="Alt+M" accesskey="m"
