no execute empty queries

--- a/pgblackboard/index.html
+++ b/pgblackboard/index.html
@@ -64,7 +64,7 @@
 
   <section class="splitstretch splitpanel-v">
     <form id="queryform" method="POST" action="" target="result"
-          class="splitstretch" enctype="multipart/form-data">
+          class="splitstretch" enctype="application/x-www-form-urlencoded">
 
       <code id="editor"></code>
 
