ace 1.1.4, favicon link

--- a/pgblackboard/index.html
+++ b/pgblackboard/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
   <title>pgBlackboard</title>
 
   <link href="assets/style.css" rel="stylesheet" />
   <link href="assets/splitpanel/splitpanel.css" rel="stylesheet" />
   <link href="assets/fontello/fontello-embedded.css" rel="stylesheet" />
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
+  <script src="//cdn.jsdelivr.net/ace/1.1.4/min/ace.js"></script>
+  <script src="//cdn.jsdelivr.net/knockout/3.1.0/knockout.js"></script>
 
   <script id="tree-tmpl" type="text/html">
     <ul data-bind="foreach: nodes">
