--- a/pgblackboard/index.html
+++ b/pgblackboard/index.html
@@ -70,6 +70,7 @@
       <code id="editor"></code>
 
       <input type="hidden" name="query" />
+      <input type="hidden" name="selection" />
 
       <div id="execbar">
         <button type="submit" title="Alt+M" accesskey="m"
