--- a/pgblackboard/index.html
+++ b/pgblackboard/index.html
@@ -15,7 +15,8 @@
 
   <script id="tree-tmpl" type="text/html">
     <ul data-bind="foreach: nodes">
-      <li class="treenode" data-bind="css: { 'current': isOpened }">
+      <li class="treenode" data-bind="css: { 'current': isOpened },
+                                      attr: { 'data-type': type }">
 
         <button data-bind="click: toggle, visible: !isLeaf, css: {
               'treenode-toggler-collapsed': !isExpanded(),
@@ -73,7 +74,7 @@
           enctype="application/x-www-form-urlencoded">
 
       <textarea id="query" name="query"
-        >\connect postgres&#13;&#10;select 'hello, ' || current_user; -- Alt + X to execute</textarea>
+        >\connect postgres&#13;&#10;select 'hello, ' || current_user; -- Alt+X to execute</textarea>
 
       <input type="hidden" name="selection" />
 
