refactor query handler map/table routing

--- a/pgblackboard/static/index.html
+++ b/pgblackboard/static/index.html
@@ -85,17 +85,14 @@
         <button type="submit"
                 title="alt-m"
                 accesskey="m"
-                name="view"
-                value="map">
+                formaction="map">
           map
         </button>
 
         <button class="execute-action"
                 type="submit"
                 title="alt-x"
-                accesskey="x"
-                name="view"
-                value="table">
+                accesskey="x">
           execute
         </button>
       </div>
