webkit only message

--- a/pgblackboard/static/index.html
+++ b/pgblackboard/static/index.html
@@ -5,6 +5,12 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
   <title>pgBlackboard</title>
 
+  <script type="text/javascript">
+    if(navigator.userAgent.indexOf('AppleWebKit') === -1){
+      alert('Your browser is not WebKit based.');
+    }
+  </script>
+
   <link href="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.6.0/codemirror.min.css"  rel="stylesheet" />
   <link href="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.6.0/theme/monokai.min.css" rel="stylesheet" />
 
