simplier server start

--- a/pgblackboard/static/index.html
+++ b/pgblackboard/static/index.html
@@ -6,7 +6,7 @@
   <title>pgBlackboard</title>
 
   <script type="text/javascript">
-    if(navigator.userAgent.indexOf('AppleWebKit') === -1){
+    if (navigator.userAgent.indexOf('AppleWebKit') === -1) {
       alert('Your browser is not WebKit based.');
     }
   </script>
@@ -117,7 +117,7 @@
 
 
   <script src="//cdn.jsdelivr.net/knockout/3.1.0/knockout.js"></script>
-  <script src="http://exe-dealer.github.io/knockout-flatBindingProvider/dist/knockout-flatBindingProvider.js"></script>
+  <script src="//exe-dealer.github.io/knockout-flatBindingProvider/dist/knockout-flatBindingProvider.js"></script>
   <script>ko.bindingProvider.instance = new ko.flatBindingProvider();</script>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.6.0/codemirror.min.js"></script>
