--- a/pgblackboard/static/index.html
+++ b/pgblackboard/static/index.html
@@ -128,5 +128,6 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.6.0/addon/edit/closebrackets.min.js"></script>
 
   <script src="script.js"></script>
+  <script>pgbb.main(/*INITIAL_DATA_PLACEHOLDER*/);</script>
 </body>
 </html>
